--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                     {% else %}
                     <div class="col-md-4 text-end">
                         <a href="{% url 'login' %}" class="btn btn-dark" role="button">Login</a>
-                        <a href="#" class="btn btn-outline-secondary" role="button">Register</a>
+                        <a href="{% url 'register' user_type=1 %}" class="btn btn-outline-secondary" role="button">Register</a>
                         <!-- 注册的url后续需修改 -->
                     </div>
                     {% endif %}
